# Valida-protocol

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  .gitignore  BPMS_Backend_API.postman_collection.json  DELIVERY_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  STEP_BY_STEP_TESTING.md  TESTING_GUIDE.md  Valida_Backend_API.postman_collection.json  package-lock.json  package.json  server.js  test-all-endpoints.sh  test-db-connection.sh
backend/config/: blockchain.js  contractAbi.json  db.js
backend/controllers/: adminController.js  deviceController.js  publisherController.js
backend/device-agent/: patchAgent.js
backend/middleware/: authMiddleware.js
backend/models/: AccessRequest.js  Device.js  InstallationLog.js  Patch.js  User.js
backend/routes/: adminRoutes.js  deviceRoutes.js  publicRoutes.js  publisherRoutes.js
backend/scripts/: seed-admin.js
circuits/: AuthBypass.circom
contract/: AuthBypassVerifier.sol  ValidaEscrow.sol  ValidaVulnerability.sol  ValidaZKVerifier.sol  ZenoEscrow.sol  ZenoVulnerability.sol  ZenoZKVerifier.sol  ZyraEscrow.sol  ZyraVulnerability.sol  ZyraZKVerifier.sol  bpms.sol  valida.sol  zyra.sol
frontend/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
scripts/: deploy.js  setup-zk.sh
solana/: .pnp.cjs  Anchor.toml  README.md  package.json
solana/programs/zyra/: Cargo.toml
solana/programs/zyra/src/: errors.rs  lib.rs
solana/programs/zyra/src/instructions/: patch.rs  vulnerability.rs
(+99 files in other folders)
